--- a/render.yaml
+++ b/render.yaml
@@ -6,3 +6,7 @@ services:
     staticPublishPath: dist
     pullRequestPreviewsEnabled: true
     autoDeploy: true
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
